--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <header>
-        <h1>Apni Kaksha</h1>
+        <h1>Complete Python only for You</h1>
     </header>
 <iframe width="1000" height="600" src="https://www.youtube.com/embed/gfDE2a7MKjA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  
